цикл for, while, do while

--- a/основы программирования/hw1_op.html
+++ b/основы программирования/hw1_op.html
@@ -1,8 +1,8 @@
 <meta charset="utf-8">
 <script type="text/javascript">
 
-var menu = prompt ("Chto budem delat? \nКонвертировать рубли в доллары и евро (1) \nили вычислять площадь трапеции? (2)")
-menu = parseInt (menu);
+var menu = +prompt ("Chto budem delat? \nКонвертировать рубли в доллары и евро (1) \nили вычислять площадь трапеции? (2)")
+//menu = parseInt (menu);
 
 if (menu == 1) {	
 var dollar = 70
@@ -17,7 +17,7 @@ else if (menu == 2) {
 
 	var osnova1 = prompt ("длина нижнего основания?");
 	var osnova2 = prompt ("длина верхнего основания?");
-	var h = prompt ("высота?");
+	var h = +prompt ("высота?");
 	var s = (osnova1 + osnova2) / h;
 
 	alert ("площадь трапеции " + h);
